ui: fix broadcast source log overflow

--- a/ui/analyse/css/study/relay/_admin.scss
+++ b/ui/analyse/css/study/relay/_admin.scss
@@ -30,7 +30,8 @@
     }
 
     > span {
-      @extend %break-word, %ellipsis;
+      @extend %ellipsis;
+      overflow-wrap: anywhere;
     }
 
     .fat {
@@ -58,11 +59,11 @@
   }
 
   .log {
-    @extend %break-word;
     overflow-x: hidden;
     overflow-y: auto;
     padding: 0.3em 0.7em;
     max-height: 20vh;
+    overflow-wrap: anywhere;
 
     > div {
       @extend %flex-center-nowrap;
